[FIX]: Minor fixes/content changes in hero, scrollbar

--- a/client/src/components/Hero/Hero.css
+++ b/client/src/components/Hero/Hero.css
@@ -35,7 +35,7 @@
 
 .Hero .left .upper .text,
 .Hero .right .lower .text {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     margin: 10px 15px 0;
     line-height: 1.2em;
 
