--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,7 @@
     outline: 0;
     padding: 0;
 }
+
 .ant-btn-primary{
     all: unset !important;
     margin: 10px !important;
@@ -36,15 +37,6 @@
     color: rgb(255, 255, 255);
 }
 
-/* a {
-    font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-    color: #535bf2;
-    } */
-
 body {
     padding: 1.2rem 0;
     /* display: flex; */
@@ -54,6 +46,25 @@ body {
     width: 100%;
     overflow-y: scroll;
 }
+
+*::-webkit-scrollbar {
+    width: 0px;
+    background-color: var(--black);
+}
+
+*::-webkit-scrollbar-thumb {
+    width: 0px !important;
+    background: var(--green);
+}
+*::-webkit-scrollbar-button,
+*::-webkit-scrollbar-corner {
+    display: none;
+}
+
+div::-webkit-scrollbar {
+    display: none;
+}
+
 
 @media only screen and (max-width: 480px) {
     :root {
